RegionGrow works ! stupid error on dimension..